--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,21 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+
+    <div class="gallery"></div>
+    <div class="btn">
+      <button type="button" class="load-more button">Load more</button>
+    </div>
   </body>
 </html>
