--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <div class="gallery"></div>
+    <div class="scroll"></div>
     <div class="btn">
       <button type="button" class="load-more button">Load more</button>
     </div>
